public/assets/css/app.css
/* ... */
.files-folder-icon {
  font-size: 30px;
  display: inline-flex;
  margin-bottom: 5px;
}
.files-folder-icon i {
  color: #9c9c9c;
}
.files-folder-title {
  font-weight: 500;
  font-size: 14px;
}
.files-folder-des {
  font-size: 12px;
}
.files-folder-number {
  position: absolute;
  right: 10px;
  top: 10px;
  min-width: 25px;
  height: 25px;
  padding: 0 5px;
  border-radius: 4px;
  background-color: #fdf4c1;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-weight: 600;
  font-size: 13px;
}
.files-folder-add_new .files-folder-title {
  color: #9c9c9c;
}
.files-folder-primary {
  border-color: #f83890;
  background-color: #ffe6f1;
}
.files-folder-primary .files-folder-title, .files-folder-primary i {
  color: #f83890;
}
.files-folder-primary:hover {
  background-color: #f83890;
}
.files-folder-primary:hover .files-folder-title, .files-folder-primary:hover i {
  color: #fff;
}
.files-folder-secondary {
  border-color: #7407ff;
  background-color: #e8ddf7;
}
.files-folder-secondary .files-folder-title, .files-folder-secondary i {
  color: #7407ff;
}
.files-folder-secondary:hover {
  background-color: #7407ff;
}
.files-folder-secondary:hover .files-folder-title, .files-folder-secondary:hover i {
  color: #fff;
}
.files-folder-warning {
  border-color: #e7bf1d;
  background-color: #fff7d8;
}
.files-folder-warning .files-folder-title, .files-folder-warning i {
  color: #cdb110;
}
.files-folder-warning:hover {
  background-color: #e7bf1d;
}
.files-folder-warning:hover .files-folder-title, .files-folder-warning:hover i {
  color: #fff;
}
.files-list {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}
.files-items {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}
.files-item {
  text-align: center;
  border: 1px solid #eee;
  padding: 10px;
  width: 200px;
  border-radius: 4px;
  position: relative;
}
.files-item-icon {
  color: #f83890;
  font-size: 32px;
}
.files-item-icon span {
  width: 32px;
  height: 32px;
  display: inline-flex;
}
.files-item-icon span img {
  max-width: 100%;
  max-height: 100%;
}
.files-item.selected {
  border-color: #f83890;
}
.files-item-content {
  overflow: hidden;
}

.add-file-input-responce img, .image-preview-section img {
  margin-top: 10px;
  border: 2px dashed #ddd;
  border-radius: 4px;
  text-align: center;
  padding: 10px;
  max-width: 100%;
}

/* ----- Recent Activity ----- */
.activity-recent-scroll {
  height: 295px;
  overflow-x: auto;
  padding-right: 12px;
}
.activity-recent-scroll::-webkit-scrollbar-track, .activity-recent-scroll::-webkit-scrollbar-thumb {
  -webkit-box-shadow: none;
  border-radius: 7px;
  background-color: #f6f5f5;
}
.activity-recent-scroll::-webkit-scrollbar-thumb {
  background-color: #fdf4c1;
}
.activity-recent-scroll::-webkit-scrollbar {
  width: 6px;
  background-color: transparent;
}

/* ----- User Skill ----- */
.skills-input .tagify__tag:focus div::before,
.skills-input .tagify__tag:hover:not([readonly]) div::before {
  --tag-bg-inset: 0;
}

.skills-input .form-control {
  min-height: inherit;
}



/*# sourceMappingURL=app.css.map */

/*
* Calender Layout demo
******************************************************************************/

.fc-theme-standard td, .fc-theme-standard th {
  border: none;
}
.fc .fc-daygrid-day-top {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
}
.fc .fc-daygrid-day.fc-day-today {
  background-color: unset;
}
.fc .fc-day-today .fc-daygrid-day-number {
  background: #7407ff;
  width: 33px;
  border-radius: 50%;
  text-align: center;
  color: #fff;
}
.fc-theme-standard .fc-scrollgrid {
  border: unset;
}
a.fc-event.fc-event-start.fc-event-end.fc-event-today.fc-daygrid-event.fc-daygrid-block-event.fc-h-event {
  background: transparent !important;
  border: none;
}
.fc-event-title.fc-sticky {
  color: #7407ff;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: center;
  font-weight: 500;
}
a.fc-event.fc-event-start.fc-event-end.fc-event-future.fc-daygrid-event.fc-daygrid-block-event.fc-h-event {
  background: unset !important;
  border: none;
}
a.fc-col-header-cell-cushion {
  color: #8b00ff;
}
.fc-daygrid-day-frame {
  background: #fff;
}
.fc-col-header-cell {
  background: #fff;
}
.fc .fc-scrollgrid-section, .fc .fc-scrollgrid-section table, .fc .fc-scrollgrid-section > td {
  height: 40px;
}
button.fc-today-button.fc-button.fc-button-primary {
  background: #f7d306;
  border: none;
  opacity: 1;
}
.fc .fc-button-primary {
  background-color: #f83890;
  border-color: unset;
  color: var(--fc-button-text-color);
}
.fc-toolbar-title {
  color: #7407ff;
}
.fc-header-toolbar.fc-toolbar{
  position: relative;
}
.fc-header-toolbar.fc-toolbar:after {
  content: "";
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  top: 48px;
  width: 100%;
  height: 1px;
  background-color: #f6f5f5;
}

.fc-event-past {
  background: transparent !important;
  border: none;
}
.fc-event-future .fc-event-title.fc-sticky {
  color: #f83890;
}
.fc .fc-button-primary:focus {
  box-shadow: unset;
}

